--- a/src/assets/styles/scss/_drawer.scss
+++ b/src/assets/styles/scss/_drawer.scss
@@ -129,11 +129,22 @@
       }
       .email-body {
         height: 175px;
-        overflow: autod;
+        overflow: auto;
         textarea {
           height: 100%;
           border: transparent;
+          &::-webkit-scrollbar {
+            width: 5px;
+          }
+          &::-webkit-scrollbar-track {
+            background: #f2f5f8;
+          }
+          &::-webkit-scrollbar-thumb {
+            background-color: $primary-color;
+            border-radius: 20px;
+          }
         }
+        
       }
 
       .body-footer {
